# vvm

./: .gitignore  .travis.yml  Makefile.am  README  README.md  build.sh  build_googletest.sh  configure.ac  shellcheck.sh
include/: jni.h  jni_types.h
include/prims/: jvm.h
src/: Makefile.am  Makefile.in  main.cpp  runtime.cpp
test/: test_interface.cpp
